# interview_coach_prep

./: .env.example  .gitattributes  .gitignore  DESKTOP_APP.md  Dockerfile  Dockerfile.nginx  LICENSE  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  render.yaml  sample.txt  start.ps1  start.sh
.github/workflows/: build_apps.yml
backend/: auth.py  config.py  main.py  models.py  requirements.txt
backend/controllers/: admin_routes.py  assist_routes.py  auth_routes.py  interview_routes.py  job_routes.py  resume_routes.py
backend/core/: config.py  db.py  security.py
backend/models/: schemas.py
backend/routes/: admin_routes.py  auth_routes.py  interview_routes.py  job_routes.py  resume_routes.py
backend/services/: ai_feedback.py  assist.py  audit.py  cache_manager.py  daily_limit.py  email_service.py  interview_engine.py  mistral_retry.py  pdf_generator.py  rag_engine.py  rate_limit.py  resume_parser.py  utils.py
backend/templates/: resume_pdf.html
backend/tests/: test_auth.py  test_interview.py  test_resume.py
docs/design_docs/: architecture_patterns.md  class_diagram.puml  design_patterns.md  system_architecture.puml
frontend/: index.html  manifest.json  sw.js
mobile_app/: README.md  pubspec.yaml
mobile_app/android/: gradle.properties
mobile_app/lib/: main.dart  offline_page.dart
mobile_app/linux/: CMakeLists.txt
scripts/: copy-artifacts.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  pytest.ini
(+81 files in other folders)
