[package]
name = "interview-coach-prep"
version = "0.1.0"
description = "AI-powered career preparation platform"
authors = ["ErnestEZY"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
